--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto';
+    background-color:#EAF1FE;
   
 }
 
@@ -75,6 +76,8 @@ body{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding-right: 400px;
+    padding-left: 400px;
 }
 
 .button button{
