--- a/style.css
+++ b/style.css
@@ -1,86 +1,211 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-body{
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto';
-    background-color:#EAF1FE;
-  
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.wraper{
-  
-    margin: auto;
-    max-width: 100%;
-    height: 100%;
+.wraper {
+  width: 1600px;
+  height: auto;
+  margin: auto;
+  font-family: "Roboto";
 }
 
-.main{
-    width: 80%;
-    height: 900px;
-    border-radius: 40px;
-    background-color: #DEEBFB;
-    margin: auto;
-    margin-top: 2%;
+header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+
+.menu button {
+  font-size: 18px;
+  font-weight: 500;
+  font-style: normal;
+  color: #bcbdbb;
+  outline: none;
+  background-color: white;
+  border: none;
+  padding-left: 120px;
+}
+
+ 
+.button_sing button {
+  border: none;
+  background-color: white;
+}
+
+.line {
+  padding-left: 120px;
+  margin-top: -9px;
+}
+
+
+h1{
+    color:#59BE29 ;
+    font-size: 121px;
+    font-weight:600 ;
+    font-style: normal;
+    width: 90%;
+
+}
+
+.info h3{
+    font-size: 25px;
+    font-weight: 500;
+    font-style: normal;
+    color: #0A1902;
+     margin-bottom: -70px;
+}
+
+.fruit_message p{
+    width: 90%;
+    color:#bcbdbb; 
+    margin-top: -30px;
+    line-height: 30px;
    
 }
 
-.meny{
-    width: 70%;
-    height: 70%;
-    background-color: white;
-    margin: auto;
-    border-radius: 40px;
-  
-    
-  
-
-}
-
-.home{
-    display: flex;
-    justify-content: space-around;
-    padding-top: 4%;
-}
-
-.home button{
-    Color:#FFFFFF ;
-    font-size: 16px;
-    font-weight: 500;
-    font-family: 'Roboto';
-    background-color: #FF5454;
-    width: 180px;
-    height: 44px;
-    border-radius: 15px;
-    border:none;
-}
-.home p{
-    Color:#909090 ;
-    font-size: 16px;
-    font-weight: 700;
-    
-}
-
-.img{
+.imag_quaritsch img{
     position: absolute;
+    padding-top: 70px;
+    margin-left: 120px;
+    
+
+}
+
+.imag_ant1 img{
+    position: absolute;
+    padding-top: 280px;
+    margin-left: 180px;
+}
+
+
+.imag_ant2 img{
+    position: absolute;
+    padding-top: 120px;
+    margin-left: 600px;
+}
+
+
+.fresh_fruit{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    padding-top: 10%;
+}
+
+.button_add_laern button{
+    background-color: white;
+    border: none;
+}
+
+
+.healthy_snack {
+ display: flex;
+ justify-content: space-between;
+ padding-top: 100px;
     
 }
 
-.imge{
-    margin-left: 90%;
-  margin-top: -70px;
+
+.imag-fruit {
+    padding-top: 50px;
 }
 
-.button{
+.snack_message {
+  padding-left: 340px;
+}
+
+.snack_message p {
+    width: 70%;
+    color:#bcbdbb; 
+    margin-top: -30px;
+    line-height: 30px;
+}
+
+.snack_message h2{
+    font-size: 49px;
+    font-weight: 600;
+    font-style: normal;
+    color: #0A1902;
+    width: 70%;
+
+}
+
+.leaves img {
+    position: absolute;
+    padding-left: 330px;
+    margin-top: -90px;
+
+}
+
+
+.information_clients{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding-right: 400px;
-    padding-left: 400px;
+   flex-wrap: wrap;
+ 
+   
 }
 
-.button button{
-    border:none;
-    background-color: #DEEBFB;
+
+
+.global{
+    padding-top:  30px;
+    padding-right: 60px;
+  
+
+}
+
+
+.round{
+    padding-top: 20px;
+    
+}
+
+.number{
+    width: 73px;
+    height: 73px;
+    background: #f9fcff;
+    border-radius: 50%;
+   
+   
+    
+}
+
+.number p{
+    font-size: 35px;
+    font-weight: 700;
+    font-style: normal;
+    color: #82CD5E;
+    padding-top: 20px;
+    padding-left: 25px;
+}
+
+.franchises p{
+    font-size: 49px;
+    font-weight: 700;
+    font-style: normal;
+    color: #82CD5E;
+    padding-left: 100px;
+    margin-top: -85px;
+}
+
+.global_franchises p{
+    color:#bcbdbb; 
+    font-size: 18px;
+   font-weight: 500;
+   font-style: normal;
+   padding-top: 20px;
+   padding-left: 90px;
+   
+}
+
+.line_franchises img{
+    position: absolute;
+   margin-top: -20px;
+   padding-left: 90px;
+
 }
